--- a/my-website/css/home.css
+++ b/my-website/css/home.css
@@ -14,13 +14,13 @@
       padding: 5px; border-radius: 5px; border: none;
     }
 
-    .banner {
-      height: 70vh;
-      background-size: cover;
-      display: flex;
-      align-items: center;
-      padding: 40px;
-    }
+   .banner {
+  height: 90vh; /* Increased from 70vh */
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  padding: 40px;
+}
 
     .banner h1 {
       background: rgba(0,0,0,0.7);
